manifests/sciety-demo/coar-notify-inbox/coar-notify-inbox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coar-notify-inbox--demo
spec:
  #  Missing mandatory property `spec.selector` supplied via Kustomize
  replicas: 1
  template:
    spec:
      containers:
      - name: app
        image: dragasteff/coar-notify-inbox:0.0.3-amd64
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: http
          timeoutSeconds: 5
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: coar-notify-inbox--demo
spec:
  type: ClusterIP
  ports:
    - targetPort: http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coar-notify-inbox--demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: coar-notify-inbox-sciety-demo.elifesciences.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coar-notify-inbox--demo
                port:
                  number: 80
  tls:
    - hosts:
        - coar-notify-inbox-sciety-demo.elifesciences.org
      secretName: sciety--demo--coar-notify-inbox--letsencrypt-cert
